--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -5,12 +5,34 @@
 .card-container {
     display: flex;
     width: 100vw;
+    color: #E94E1B;
 }
 
 .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-grow: 1;
-    height: 500px;
+    height: 450px;
     background-size: cover;
-    backdrop-filter: blur(40px);
-    z-index: 1;
+    backdrop-filter: saturate(90%);
+    backdrop-filter: brightness(50%);
+}
+
+.card-footer {
+    text-align: center;
+    user-select: none;
+    height: fit-content;
+    z-index: 10000;
+    backdrop-filter: saturate(90%);
+    backdrop-filter: brightness(50%);
+}
+
+.card-content {
+    backdrop-filter: saturate(90%);
+    backdrop-filter: brightness(50%);
+}
+
+.card-footer p {
+    color: white;
 }
